<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="arc_capes_desc">Ativa capas da Cosmetica (anteriormente Arc). Para mais informações visite https://cosmetica.cc. Requer OptiFine.</string>
    <string name="arc_capes_title">Capas da Cosmetica</string>
    <string name="autoram_info_msg">Memória definida para %d MB</string>
    <string name="color_default_hex">FFFF0000</string>
    <string name="control_adebug">Depuração de entrada</string>
    <string name="control_bottom_offset">Deslocamento inferior:</string>
    <string name="control_customkey">Enviar tecla personalizada</string>
    <string name="control_forceclose">Forçar encerramento</string>
    <string name="control_left_offset">Deslocamento esquerdo:</string>
    <string name="control_mouseoff">Mouse: desligado</string>
    <string name="control_mouseon">Mouse: ligado</string>
    <string name="control_offset_title">Deslocamento do controle</string>
    <string name="control_right_offset">Deslocamento direito:</string>
    <string name="control_top_offset">Deslocamento superior:</string>
    <string name="control_viewout">Registro de saída</string>
    <string name="copy">Copy</string>
    <string name="customctrl_addbutton">Adicionar botão</string>
    <string name="customctrl_addbutton_drawer">Adicionar botão gaveta</string>
    <string name="customctrl_addsubbutton">Adicionar sub-botão</string>
    <string name="customctrl_background_color">Cor de fundo</string>
    <string name="customctrl_button_opacity">Opacidade do botão</string>
    <string name="customctrl_corner_radius">Raio dos cantos</string>
    <string name="customctrl_export">Exportar controle</string>
    <string name="customctrl_mapping">Mapeamento</string>
    <string name="customctrl_orientation">Orientação</string>
    <string name="customctrl_passthru">Mouse pode atravessar</string>
    <string name="customctrl_selectdefault">Selecionar o json de controle padrão</string>
    <string name="customctrl_size">Tamanho</string>
    <string name="customctrl_stroke_color">Cor do traçado</string>
    <string name="customctrl_stroke_width">Largura do traçado</string>
    <string name="customctrl_swipeable">Deslizável</string>
    <string name="customctrl_toggle">Alternável</string>
    <string name="dl_library_sha_fail">Biblioteca %s está danificada e será baixada novamente</string>
    <string name="dl_library_sha_pass">Biblioteca %s está boa e utilizável</string>
    <string name="dl_library_sha_unknown">A biblioteca %s não pôde ser verificada, vamos assumir que está boa</string>
    <string name="error_fatal">O Pixelmon Brasil parou de funcionar inesperadamente</string>
    <string name="error_show_less">Mostrar menos</string>
    <string name="error_show_more">Mostrar mais</string>
    <string name="expand_button_title">Advanced</string>
    <string name="gles_hack_always">Dividir todas texturas por 2</string>
    <string name="gles_hack_none">Não encolher texturas</string>
    <string name="gles_hack_sometimes">Dividir texturas grandes por 2 ou 4</string>
    <string name="gles_hack_title">Compressão GL4ES</string>
    <string name="global_clone">Clonar</string>
    <string name="global_delete">Excluir</string>
    <string name="global_edit">Editar</string>
    <string name="global_error">Erro</string>
    <string name="global_error_field_empty">Este campo não pode ficar vazio</string>
    <string name="global_load">Carregar</string>
    <string name="global_name">Nome</string>
    <string name="global_remove">Remover</string>
    <string name="global_restart">Reiniciar</string>
    <string name="global_save">Salvar</string>
    <string name="global_unpacking">Descompactando %s</string>
    <string name="global_waiting">Aguarde</string>
    <string name="global_warinng">Aviso</string>
    <string name="hint_control_mapping">Clique na engrenagem para abrir o menu ◀ \10Clique em um botão para personalizar (editar, redimensionar ou excluir).</string>
    <string name="import_control_done">Importação concluída</string>
    <string name="import_control_import_button">Importar controles</string>
    <string name="import_control_invalid_file">Arquivo inválido ou corrompido</string>
    <string name="import_control_invalid_name">Nome inválido ou o arquivo já existe</string>
    <string name="import_control_label">Importar controles</string>
    <string name="import_control_verifying_file">O arquivo está sendo verificado, por favor aguarde e tente novamente…</string>
    <string name="lazy_service_default_title">Pixelmon Brasil serviço em segundo plano</string>
    <string name="login_online_login_label">Logar</string>
    <string name="login_online_username_hint">Nome de usuário</string>
    <string name="login_pirate_button">Pirata</string>
    <string name="main_add_account">Adicionar conta</string>
    <string name="main_login_done">Login concluído</string>
    <string name="main_play">Jogar</string>
    <string name="mcl_disable_gestures">Desativar gestos</string>
    <string name="mcl_disable_gestures_subtitle">Desativa gestos, como segurar para quebrar blocos e tocar para colocar um bloco.</string>
    <string name="mcl_launch_cleancache">Limpando arquivos em cache</string>
    <string name="mcl_launch_download_assets">Preparando para baixar os recursos</string>
    <string name="mcl_launch_downloading">Baixando %s</string>
    <string name="mcl_memory_allocation">Alocação de memória</string>
    <string name="mcl_memory_allocation_subtitle">Controla o quanto de RAM será usado pelo Minecraft</string>
    <string name="mcl_option_customcontrol">Controles personalizados</string>
    <string name="mcl_option_subtitle_customcontrol">Personalize o seu hud.</string>
    <string name="mcl_setting_category_renderer">Renderizador</string>
    <string name="mcl_setting_check_libraries">Verificar as bibliotecas depois de baixar</string>
    <string name="mcl_setting_check_libraries_subtitle">Esta opção força o launcher a verificar o hash da biblioteca se ele estiver disponível. Impede baixar arquivos com problemas.</string>
    <string name="mcl_setting_renderer_angle">ANGLE - Performance média</string>
    <string name="mcl_setting_renderer_gles2_4">holy gl4es - Melhor suporte</string>
    <string name="mcl_setting_renderer_virgl">virglrenderer (OpenGL ES 3)</string>
    <string name="mcl_setting_renderer_vulkan_zink">zink (Vulkan): exporta o OpenGL 4.6</string>
    <string name="mcl_setting_subtitle_buttonscale">Aumenta os botões caso estiverem muito pequenos.</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignorar o entalhe e estender a tela por baixo dele.\10Garante uma experiência mais envolvente.</string>
    <string name="mcl_setting_subtitle_javaargs">Cuidado, isto pode causar falhas no seu jogo caso modificado sem conhecimento.</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Tempo para acionar a função de destruir bloco e largar item.</string>
    <string name="mcl_setting_subtitle_mousescale">Alterar o tamanho do mouse virtual.</string>
    <string name="mcl_setting_subtitle_mousespeed">Altera a velocidade do mouse do software</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Permite que você reduza a resolução do jogo. 100% é a resolução total</string>
    <string name="mcl_setting_subtitle_use_surface_view">Pode ajudar na performance em cenários de GPU limitada</string>
    <string name="mcl_setting_title_buttonscale">Escala dos botões</string>
    <string name="mcl_setting_title_ignore_notch">Ignorar entalhe</string>
    <string name="mcl_setting_title_javaargs">Argumentos JVM</string>
    <string name="mcl_setting_title_longpresstrigger">Quanto tempo será acionado depois de manter pressionado</string>
    <string name="mcl_setting_title_mousescale">Escala do mouse</string>
    <string name="mcl_setting_title_mousespeed">Velocidade do mouse</string>
    <string name="mcl_setting_title_resolution_scaler">Escala de resolução</string>
    <string name="mcl_setting_title_use_surface_view">Usar renderização de superfície alternativa</string>
    <string name="mcn_check_fail_lwjgl">LWJGL3 não foi instalado!</string>
    <string name="mcn_check_fail_vulkan_support">O renderizador Vulkan Zink não é suportado neste dispositivo!</string>
    <string name="mcn_exit_call">Sair</string>
    <string name="mcn_exit_confirm">Tem certeza que deseja forçar o encerramento?</string>
    <string name="mcn_exit_title">Aplicativo/jogo fechou com o código %d, verifique latestlog.txt para mais detalhes.</string>
    <string name="memory_warning_msg">A quantidade atual de RAM livre (%d) é menor que a RAM alocada (%d), no qual pode causar falhas. Altere a quantidade se o jogo apresentar alguma falha.</string>
    <string name="multirt_subtitle">Gerenciar Java VMs instalados</string>
    <string name="multirt_title">Gerenciador do Runtime</string>
    <string name="preference_account_descripton">Adicione, selecione e remova contas</string>
    <string name="preference_account_title">Contas</string>
    <string name="preference_control_description">Tipos de gestos, gatilhos e escala</string>
    <string name="preference_control_title">Personalização dos controles</string>
    <string name="preference_java_description">Versão do Java, argumentos da JVM e quantidade de RAM</string>
    <string name="preference_java_title">Ajustes do Java</string>
    <string name="preference_misc_description">Lista de versões e verificação das bibliotecas</string>
    <string name="preference_misc_title">Configurações diversas</string>
    <string name="preference_mouse_start_description">Usando esta opção fará com que você seja julgado pelo Mathias-Boulay</string>
    <string name="preference_mouse_start_title">Iniciar com o mouse virtual ligado</string>
    <string name="preference_sustained_performance_description">Limitar redução térmica limitando o pico de desempenho</string>
    <string name="preference_sustained_performance_title">Ativar o modo de desempenho sustentado</string>
    <string name="preference_video_description">Resolução, tipo de escala e renderizador</string>
    <string name="preference_video_title">Vídeo e renderizador</string>
</resources>