<?xml version="1.0" encoding="utf-8"?>
<com.kdt.DefocusableScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/background_app" android:layout_width="@dimen/_230sdp" android:layout_height="match_parent" android:layout_marginVertical="@dimen/_14sdp">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/edit_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/_5sdp" android:paddingVertical="@dimen/_5sdp" app:layout_optimizationLevel="10d">
        <TextView android:gravity="center" android:id="@+id/editName_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_name" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <EditText android:gravity="center" android:id="@+id/editName_editText" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="Button Name" android:maxLines="1" android:imeOptions="flagNoExtractUi" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editName_textView"/>
        <TextView android:gravity="center" android:id="@+id/editSize_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_size" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editName_editText"/>
        <EditText android:gravity="center" android:id="@+id/editSize_editTextX" android:layout_width="140dp" android:layout_height="wrap_content" android:inputType="numberDecimal" android:imeOptions="flagNoExtractUi" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editSize_textView"/>
        <EditText android:gravity="center" android:id="@+id/editSize_editTextY" android:layout_width="0dp" android:layout_height="0dp" android:inputType="numberDecimal" android:imeOptions="flagNoExtractUi" app:layout_constraintBottom_toBottomOf="@+id/editSize_editTextX" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/editSize_editTextX" app:layout_constraintTop_toTopOf="@+id/editSize_editTextX"/>
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="0dp" android:text="x" app:layout_constraintBottom_toBottomOf="@+id/editSize_editTextX" app:layout_constraintEnd_toStartOf="@+id/editSize_editTextY" app:layout_constraintStart_toEndOf="@+id/editSize_editTextX" app:layout_constraintTop_toTopOf="@+id/editSize_editTextX"/>
        <TextView android:id="@+id/editMapping_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_mapping" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editSize_editTextX"/>
        <Spinner android:gravity="center" android:id="@+id/editMapping_spinner_1" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintBottom_toTopOf="@+id/editMapping_spinner_3" app:layout_constraintEnd_toStartOf="@+id/editMapping_spinner_2" app:layout_constraintHorizontal_chainStyle="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editMapping_textView" app:layout_constraintVertical_chainStyle="0"/>
        <TextView android:gravity="center" android:id="@+id/editMapping_plus_1" android:layout_width="wrap_content" android:layout_height="0dp" android:text="+" app:layout_constraintBottom_toBottomOf="@+id/editMapping_spinner_1" app:layout_constraintEnd_toEndOf="@+id/editMapping_spinner_1" app:layout_constraintTop_toTopOf="@+id/editMapping_spinner_1"/>
        <Spinner android:gravity="center" android:id="@+id/editMapping_spinner_2" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintBottom_toBottomOf="@+id/editMapping_spinner_1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/editMapping_spinner_1" app:layout_constraintTop_toTopOf="@+id/editMapping_spinner_1"/>
        <TextView android:gravity="center" android:id="@+id/editMapping_plus_2" android:layout_width="wrap_content" android:layout_height="0dp" android:text="+" app:layout_constraintBottom_toBottomOf="@+id/editMapping_textView" app:layout_constraintEnd_toEndOf="@+id/editMapping_textView" app:layout_constraintTop_toTopOf="@+id/editMapping_spinner_3"/>
        <Spinner android:gravity="center" android:id="@+id/editMapping_spinner_3" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintEnd_toStartOf="@+id/editMapping_spinner_4" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editMapping_spinner_1"/>
        <TextView android:gravity="center" android:id="@+id/editMapping_plus_3" android:layout_width="wrap_content" android:layout_height="0dp" android:text="+" app:layout_constraintBottom_toBottomOf="@+id/editMapping_spinner_3" app:layout_constraintEnd_toEndOf="@+id/editMapping_spinner_3" app:layout_constraintTop_toBottomOf="@+id/editMapping_spinner_1"/>
        <Spinner android:gravity="center" android:id="@+id/editMapping_spinner_4" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/editMapping_spinner_3" app:layout_constraintTop_toBottomOf="@+id/editMapping_spinner_2"/>
        <TextView android:gravity="center" android:id="@+id/editOrientation_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_orientation" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editMapping_spinner_3"/>
        <Spinner android:id="@+id/editOrientation_spinner" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editOrientation_textView"/>
        <Switch android:id="@+id/checkboxToggle" android:layout_width="match_parent" android:layout_height="30dp" android:text="@string/customctrl_toggle" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editOrientation_spinner"/>
        <Switch android:id="@+id/checkboxPassThrough" android:layout_width="match_parent" android:layout_height="30dp" android:text="@string/customctrl_passthru" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/checkboxToggle"/>
        <Switch android:id="@+id/checkboxSwipeable" android:layout_width="match_parent" android:layout_height="30dp" android:text="@string/customctrl_swipeable" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/checkboxPassThrough"/>
        <p001fr.spse.extended_view.ExtendedTextView android:gravity="center_vertical" android:id="@+id/editBackgroundColor_textView" android:background="?attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="35dp" android:text="@string/customctrl_background_color" android:drawableEnd="@drawable/spinner_arrow_right" android:paddingEnd="5dp" app:drawableEndIntegerScaling="true" app:drawableEndSize="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/checkboxSwipeable"/>
        <TextView android:gravity="center" android:id="@+id/editStrokeWidth_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_stroke_width" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editStrokeColor_textView"/>
        <SeekBar android:id="@+id/editStrokeWidth_seekbar" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.538" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editStrokeWidth_textView"/>
        <TextView android:gravity="center" android:id="@+id/editStrokeWidth_textView_percent" android:layout_width="50dp" android:layout_height="0dp" android:text="100%" app:layout_constraintBottom_toBottomOf="@+id/editStrokeWidth_textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/editStrokeWidth_textView"/>
        <p001fr.spse.extended_view.ExtendedTextView android:gravity="center_vertical" android:id="@+id/editStrokeColor_textView" android:background="?attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="35dp" android:text="@string/customctrl_stroke_color" android:drawableEnd="@drawable/spinner_arrow_right" android:paddingEnd="5dp" app:drawableEndIntegerScaling="true" app:drawableEndSize="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editBackgroundColor_textView"/>
        <TextView android:gravity="center" android:id="@+id/editCornerRadius_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_corner_radius" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editStrokeWidth_seekbar"/>
        <SeekBar android:id="@+id/editCornerRadius_seekbar" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editCornerRadius_textView"/>
        <TextView android:gravity="center" android:id="@+id/editCornerRadius_textView_percent" android:layout_width="50dp" android:layout_height="0dp" android:text="100%" app:layout_constraintBottom_toBottomOf="@+id/editCornerRadius_textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/editCornerRadius_textView"/>
        <TextView android:gravity="center" android:id="@+id/editButtonOpacity_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customctrl_button_opacity" android:paddingEnd="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editCornerRadius_seekbar"/>
        <SeekBar android:id="@+id/editButtonOpacity_seekbar" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/editButtonOpacity_textView"/>
        <TextView android:gravity="center" android:id="@+id/editButtonOpacity_textView_percent" android:layout_width="50dp" android:layout_height="0dp" android:text="100%" app:layout_constraintBottom_toBottomOf="@+id/editButtonOpacity_textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/editButtonOpacity_textView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.kdt.DefocusableScrollView>
